add some libraries

--- a/DatabaseManagement/nbproject/project.properties
+++ b/DatabaseManagement/nbproject/project.properties
@@ -30,7 +30,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.1.4.jar=G:\\programing tools\\jcalendar-1.1.4.jar\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.1.4.jar-1=/home/linganesan/Documents/jcalendar-1.1.4.jar
 file.reference.jcalendar-1.4.jar=D:\\Studies\\University\\Semester 4\\Database Systems\\Project\\Git\\DatabaseManagement\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=/home/linganesan/Documents/jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 7.4\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.synthetica.jar=D:\\Studies\\University\\Semester 4\\Database Systems\\Project\\Git\\DatabaseManagement\\lib\\synthetica.jar
 file.reference.syntheticaBlackStar.jar=D:\\Studies\\University\\Semester 4\\Database Systems\\Project\\Git\\DatabaseManagement\\lib\\syntheticaBlackStar.jar
@@ -44,7 +46,9 @@ javac.classpath=\
     ${libs.ejb3-persistence.classpath}:\
     ${libs.hibernate-support.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.jcalendar-1.1.4.jar}
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.jcalendar-1.1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
